# gspn_framework_package

./: CMakeLists.txt  README.md  package.xml
common/src/gspn_framework_package/: gspn.py  gspn_3_places.xml  gspn_execution.py  gspn_execution_input.json  gspn_execution_input_2.json  gspn_moon_base.xml  gspn_temperature_patrol.xml  gspn_tools.py  gspn_visualization.py  marking_transition.txt  policy.py
ros/Example/: example_gspn.xml  example_input.json  example_robots.launch  example_servers.launch
ros/Example/PlaceFiles/: P1_example.py  P2_example.py  P7_example.py
ros/TestCases/: create_dataframe.py  mem_cpu_commands.txt  relevant_commands.txt
ros/TestCases/ImmediateTransitions/: gspn_immediate_robots.launch  gspn_immediate_servers.launch  gspn_immediate_test_case.xml  input_immediate_transitions.json
ros/TestCases/NoGazeboPlaces/: no_gazebo_p_gspn.xml  no_gazebo_p_input.json  no_gazebo_p_robots.launch  no_gazebo_p_servers.launch
ros/TestCases/NoGazeboPlacesOneToken/: no_gazebo_p_1_t_gspn.xml  no_gazebo_p_1_t_input.json  (+2 more)
ros/launch/: gspn_execution_gazebo_rviz_servers.launch  gspn_execution_robots.launch  gspn_execution_robots_1.launch  gspn_execution_robots_2.launch  gspn_execution_robots_6.launch  gspn_execution_servers.launch  gspn_execution_servers_2_places.launch  gspn_execution_servers_6.launch  gspn_simulation_navigation.launch  try_move_base.launch  try_mul_nav.launch  try_one_robot.launch  try_simulation.launch
ros/msgs/: CurrentPlace.srv
ros/scripts/: server_1.py  server_1_goto.py  server_2.py  server_3.py  server_3_goto.py  server_6.py
(+198 files in other folders)
