<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>gspn_framework_package</name>
 <version>1.0.0</version>
 <description>A framework to execute and visualize gspns</description>
 <author email="caldeira.a.pedro@gmail.com"></author>
 <maintainer email="caldeira.a.pedro@gmail.com">Pedro Caldeira</maintainer>
 <license>GPLv3</license>

 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>message_generation</build_depend>
 <build_depend>actionlib_msgs</build_depend>
 <build_depend>actionlib</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>rospy</build_depend>

 <exec_depend>actionlib_msgs</exec_depend>
 <exec_depend>actionlib</exec_depend>
 <exec_depend>std_msgs</exec_depend>
 <exec_depend>message_runtime</exec_depend>
 <exec_depend>rospy</exec_depend>
 <export>
     <!-- gazebo_ros_paths_plugin automatically adds these to
         GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
         the package.xml file. You can than use URIs of type model://my_package/stuff. -->
     <gazebo_ros
         gazebo_plugin_path="${prefix}/lib"
         gazebo_model_path="${prefix}/.." />
 </export>
</package>
